--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,15 +1,10 @@
-version: '3.7'
+version: '3.1'
 services:
-  mongodb_container:
+  mongo:
     image: mongo:latest
+    ports:
+      - '27017:27017'
     environment:
       MONGO_INITDB_ROOT_USERNAME: docker
       MONGO_INITDB_ROOT_PASSWORD: docker
-      MONGO_INITDB_DATABASE: ecommerce
-    ports:
-      - 27017:27017
-    volumes:
-      - mongodb_data_container:/data/db
-
-volumes:
-  mongodb_data_container:
+    command: mongod --replSet rs0
