--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^5.17.0",
     "@stripe/connect-js": "^3.3.12",
     "bcrypt": "^5.1.1",
