--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
