--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
+    "@mui/styled-engine-sc": "^6.0.2",
+    "@mui/x-charts": "^7.16.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "react": "^18.3.1",
@@ -17,7 +22,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
-    "styled-components": "^6.1.12",
+    "styled-components": "^6.1.13",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
