--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
