--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@mui/x-charts": "^7.16.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
