--- a/web/package.json
+++ b/web/package.json
@@ -17,19 +17,23 @@
     "@mui/x-charts": "^7.16.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "randomuuid": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.13",
+    "uuid": "^10.0.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.8.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
