--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -8,7 +8,8 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strictNullChecks": false
   },
   "include": ["src", "test"],
   "exclude": ["node_modules"]
