--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.0.2",
     "@mui/styled-engine-sc": "^6.0.2",
     "@mui/x-charts": "^7.16.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@tanstack/react-query": "^5.51.23",
     "@types/identity-obj-proxy": "^3.0.2",
     "axios": "^1.7.3",
@@ -26,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.13",
     "uuid": "^10.0.0",
@@ -44,6 +46,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
+    "@types/react-input-mask": "^3.0.5",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
